--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
             ],
             "url": "https://raw.githubusercontent.com/Azure/AzOps/main/schema/2020-08-01/azstate.json"
         }
-    ]
+    ],
+    "powershell.codeFormatting.addWhitespaceAroundPipe": true
 }
